# rusteware

./: .gitignore  DESIGN.md  README.md
.github/: dependabot.yml
server/: Cargo.toml  config.toml  config.toml.example  schema.sql
server/src/: config.rs  database.rs  main.rs  webserver.rs
