[package]
name = "rusteware-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
mysql = "23.0.1"
polling = "2.5.2"
serde = "1.0.152"
serde_derive = "1.0.152"
tokio = { version = "1", features = ["full"] }
toml = "0.7.1"
warp = "0.3.3"
